--- a/index.css
+++ b/index.css
@@ -24,6 +24,16 @@ body {
   color: var(--white);
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
+@media screen and (prefers-reduced-motion: reduce) {
+  html {
+    scroll-behavior: auto;
+  }
+}
+
 /* Clases Utilitarias */
 
 .invisible {
@@ -78,6 +88,19 @@ body {
   padding: 10px 0;
   color: #fafafa;
   list-style: none;
+  cursor: pointer;
+}
+
+.header__link {
+  text-decoration: none;
+  font-size: inherit;
+  font-family: inherit;
+  color: #fff;
+  transition: color 0.3s ease-out;
+}
+
+.header__link:hover {
+  color: #bbb;
 }
 
 .presentacion {
@@ -128,6 +151,7 @@ body {
   width: 80%;
   padding: 13px;
   border-radius: 5px;
+  cursor: pointer;
 }
 
 .presentacion__button:nth-child(1) {
@@ -181,7 +205,7 @@ body {
   display: flex;
   justify-content: space-evenly;
   align-items: center;
-  width: 65%;
+  width: 200px;
   padding: 13px;
   font-family: inherit;
   font-weight: 500;
@@ -252,6 +276,134 @@ body {
   cursor: pointer;
 }
 
-h4 {
+.autor {
   text-align: center;
+}
+
+@media screen and (min-width: 1024px) {
+  .header {
+    position: fixed;
+    z-index: 500;
+    justify-content: space-around;
+    width: 100vw;
+    background-color: var(--background);
+  }
+
+  .header__navbar {
+    width: 35%;
+    margin: 0;
+  }
+
+  .header__img-container {
+    display: none;
+  }
+
+  .header__list {
+    position: static;
+    z-index: 1000;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-evenly;
+    width: 100%;
+    height: auto;
+    margin: 0;
+    padding: 0;
+  }
+
+  .presentacion__title {
+    font-size: 60px;
+    line-height: 71px;
+    letter-spacing: -0.5px;
+  }
+
+  .presentacion__content {
+    font-size: 20px;
+    line-height: 24px;
+    letter-spacing: 0.15px;
+  }
+
+  .presentacion__button-container {
+    display: flex;
+    flex-direction: row;
+  }
+
+  .presentacion__button:nth-child(1) {
+    border: 3px solid var(--primary);
+  }
+
+  .presentacion__button:nth-child(1):hover {
+    border: 3px solid var(--hover);
+  }
+
+  .presentacion__description-container {
+    flex-direction: row;
+    gap: 30px;
+    width: 80%;
+    padding: 20px;
+    padding-right: 100px;
+  }
+
+  .presentacion__description-img {
+    flex-basis: 35%;
+  }
+
+  .presentacion__description-content-container {
+    justify-content: space-between;
+  }
+
+  .presentacion__description-title {
+    margin: 0;
+    font-size: 48px;
+    line-height: 57px;
+  }
+
+  .main {
+    width: 70%;
+  }
+
+  .main__button {
+    width: 218px;
+    padding: 16px;
+    margin: 0 auto;
+    margin-bottom: 100px;
+  }
+
+  .main__button:hover {
+    background-color: var(--hover);
+    cursor: pointer;
+  }
+
+  .footer {
+    flex-direction: column;
+    flex-wrap: wrap;
+    align-items: flex-start;
+    width: 80%;
+    height: 240px;
+    margin: 0 auto;
+    margin-top: 30px;
+    margin-bottom: 0;
+    padding: 20px 0;
+    border-top: 1px solid var(--border);
+    border-bottom: 1px solid var(--border);
+  }
+
+  .footer__logo-container {
+    height: 100%;
+  }
+
+  .autor-container {
+    width: 80%;
+    margin: 0 auto;
+  }
+
+  .autor {
+    text-align: left;
+  }
+}
+
+@media screen and (min-width: 1650px) {
+  .main {
+    width: 60%;
+  }
 }
